--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Passionate about Science
+title: about Science
 subtitle: This is a blog where I share my notes and projects related to statistics.
 ---
